--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -9,45 +9,40 @@ on:
   # run on all pr
 
 jobs:
-  # build:
-  #   strategy:
-  #     matrix:
-  #       os: [ubuntu-latest, windows-latest, macOS-latest]
-  #       shared: ["ON", "OFF"]
-  #   runs-on: ${{ matrix.os }}
-  #   name: ${{ matrix.os }} - shared=${{ matrix.shared }}
-  #   steps:
-  #   - uses: actions/checkout@v2
-  #   - name: Create build dir
-  #     run: cmake -E make_directory ${{github.workspace}}/build
-  #   - name: Build
-  #     working-directory: ${{github.workspace}}/build
-  #     run: |
-  #       cmake .. -DBUILD_SHARED_LIBS=${{ matrix.shared }} -DUTF8PROC_ENABLE_TESTING=ON
-  #       cmake --build .
-  #   - name: Run Test
-  #     working-directory: ${{github.workspace}}/build
-  #     run: ctest
+  build:
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest, macOS-latest]
+        shared: ["ON", "OFF"]
+    runs-on: ${{ matrix.os }}
+    steps:
+    - uses: actions/checkout@v2
+    - name: Build
+      run: |
+        mkdir build
+        cmake -S . -B build -DBUILD_SHARED_LIBS=${{ matrix.shared }} -DUTF8PROC_ENABLE_TESTING=ON
+        cmake --build build
+    - name: Run Test
+      run: ctest --test-dir build -V
 
-  mingw-build:
+  mingw:
     strategy:
       matrix:
         os: [windows-latest]
         shared: ["ON", "OFF"]
     runs-on: ${{ matrix.os }}
-
+    defaults:
+      run:
+        shell: msys2 {0}
     steps:
     - uses: actions/checkout@v2
     - uses: msys2/setup-msys2@v2
       with:
         install: gcc make mingw-w64-x86_64-cmake
-    - name: Create build dir
-      run: mkdir build
     - name: Build
-      shell: msys2 {0}
       run: |
+        mkdir build
         cmake -S . -B build -DBUILD_SHARED_LIBS=${{ matrix.shared }} -DUTF8PROC_ENABLE_TESTING=ON -G'MSYS Makefiles'
         cmake --build build
     - name: Run Test
-      shell: msys2 {0}
       run: ctest --test-dir build -V
