--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -15,6 +15,7 @@ jobs:
         os: [ubuntu-latest, windows-latest, macOS-latest]
         shared: ["ON", "OFF"]
     runs-on: ${{ matrix.os }}
+    name: ${{ matrix.os }} - shared=${{ matrix.shared }}
     steps:
     - uses: actions/checkout@v2
     - name: Build
@@ -31,6 +32,7 @@ jobs:
         os: [windows-latest]
         shared: ["ON", "OFF"]
     runs-on: ${{ matrix.os }}
+    name: mingw64 - shared=${{ matrix.shared }}
     defaults:
       run:
         shell: msys2 {0}
