--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -30,7 +30,9 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: ${{ matrix.os }}
-        path: build/libutf8proc.*
+        path: |
+          build/libutf8proc.*
+          build/Debug/utf8proc.*
 
   mingw:
     strategy:
