--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Run Test
       run: ctest --test-dir build -V
     - name: Upload shared lib
-      if: ${{ matrix.shared }}=='ON'
+      if: matrix.shared == 'ON'
       uses: actions/upload-artifact@v2
       with:
         name: ${{ matrix.os }}
@@ -57,8 +57,8 @@ jobs:
     - name: Run Test
       run: ctest --test-dir build -V
     - name: Upload shared lib
-      if: ${{ matrix.shared }}=='ON'
+      if: matrix.shared == 'ON'
       uses: actions/upload-artifact@v2
       with:
-        name: mingw64-libutf8proc
+        name: ${{ matrix.os }} - mingw64
         path: build/libutf8proc.*
